# Calculator

./: .gitignore  CMakeLists.txt  Makefile  MakefileTemplate.txt  README.md  calculator.cpp  calculator.h  equation.cpp  equation.h  error.h  main.cpp  precedence.cpp  precedence.h  test.cpp
